# webxash3d-proxy

./: .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  package-lock.json  package.json  rustfmt.toml
.github/workflows/: _build-binaries.yml  ci.yml  publish.yml  release.yml
.husky/: pre-commit
client/: package-lock.json  package.json  vite.config.ts
client/src/: main.ts  webrtc.ts
scripts/: setup-client.sh
src/: assets.rs  bridge.rs  config.rs  main.rs  signaling.rs
